##  Author: Mo McRoberts
##
##  Copyright (c) 2017 BBC
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

imgdir = ${webstaticdir}/${PACKAGE}/${VERSION}/img

EXTRA_DIST = README.md

dist_img_DATA = \
	bbc-blocks-black.svg bbc-blocks-black@1x.png bbc-blocks-black@2x.png \
	bbca-blocks-black.svg bbca-blocks-black@1x.png bbca-blocks-black@2x.png \
	bbc-blocks-dark.svg bbc-blocks-dark@1x.png bbc-blocks-dark@2x.png \
	bbca-blocks-dark.svg bbca-blocks-dark@1x.png bbca-blocks-dark@2x.png
